<?php
if (!defined('BASEPATH'))
    exit('No direct script access allowed');

$CI = &get_instance();
$CI->load->model('common_model');
$CI->load->model('sections_model');

$CI->load->language('user_roles_per_section');

/**
 *	Accès base Sections
 *
 *  C'est un CRUD de base. Beaucoup de méthodes sont 
 *  implémentés dans Common_Model
 */
class User_roles_per_section_model extends Common_Model {
    public $table = 'user_roles_per_section';
    protected $primary_key = 'id';

    /**
     *	Retourne le tableau tableau utilisé pour l'affichage par page
     *	@return objet		  La liste
         SELECT 
            u.username,
            t.nom AS role_type,
            s.nom AS section_name,
            urps.id AS user_role_id,
            u.email
            #    t.description AS role_description,
            #    s.description AS section_description
        FROM user_roles_per_section urps
        JOIN users u ON urps.user_id = u.id
        JOIN types_roles t ON urps.types_roles_id = t.id
        JOIN sections s ON urps.section_id = s.id;
     */
    public function select_page($nb = 1000, $debut = 0) {

        $section_id = $this->session->userdata('section');
        $section = $this->sections_model->get_by_id('id', $section_id);

        $this->db->select('users.username, types_roles.nom as role_type, sections.nom as section_name, 
                   user_roles_per_section.id as id, users.email, 
                   types_roles.description as role_description, 
                   sections.description as section_description');
        $this->db->from('user_roles_per_section');
        $this->db->join('users', 'user_roles_per_section.user_id = users.id');
        $this->db->join('types_roles', 'user_roles_per_section.types_roles_id = types_roles.id');
        $this->db->join('sections', 'user_roles_per_section.section_id = sections.id');
        if ($section) {
            $this->db->where('sections.id', $section_id);
        }
        $result = $this->db->get()->result_array();
        $this->gvvmetadata->store_table("vue_user_roles_per_section", $result);
    }

    /**
     * Retourne une chaîne de caractère qui identifie une ligne de façon unique.
     * Cette chaîne est utilisé dans les affichages.
     * Par défaut elle retourne la valeur de la clé, mais elle est conçue pour être
     * surchargée.
     */
    public function image($key) {
        if ($key == "")
            return "";
        $vals = $this->get_by_id('id', $key);
        if (array_key_exists('nom', $vals)) {
            return $vals['nom'];
        } else {
            return "section inconnu $key";
        }
    }

    /**
     * Retourne un hash qui peut-être utilisé dans un menu drow-down
     * avec une entrée "Tous .
     * ."
     *
     * @param $where selection
     */
    public function selector_with_all($where = array(), $filter_section = false) {
        $result = $this->selector($where);
        $result[] = $this->lang->line("all_sections");
        return $result;
    }

    /**
     * The following code has been generated by Claude AI.
     * 
     * In some way it interact with several tables which brakes the usual schema with one model per table. It may have to be refactored (or not). 
     */

    public function get_all_sections() {
        return $this->db->get('sections')->result();
    }

    public function get_all_users() {
        return $this->db->get('users')->result();
    }

    public function get_all_role_types() {
        return $this->db->get('types_roles')->result();
    }

    public function get_user_roles_for_section($section_id) {
        $this->db->select('user_id, types_roles_id');
        $this->db->where('section_id', $section_id);
        $result = $this->db->get('user_roles_per_section')->result();

        // Convert to lookup array for easier checking in view
        $roles = array();
        foreach ($result as $row) {
            $roles[$row->user_id . '_' . $row->types_roles_id] = true;
        }
        return $roles;
    }

    public function toggle_user_role($user_id, $role_id, $section_id) {
        // Check if entry exists
        $this->db->where('user_id', $user_id);
        $this->db->where('types_roles_id', $role_id);
        $this->db->where('section_id', $section_id);
        $exists = $this->db->get('user_roles_per_section')->num_rows();

        if ($exists) {
            // Delete if exists
            $this->db->where('user_id', $user_id);
            $this->db->where('types_roles_id', $role_id);
            $this->db->where('section_id', $section_id);
            return $this->db->delete('user_roles_per_section');
        } else {
            // Insert if doesn't exist
            $data = array(
                'user_id' => $user_id,
                'types_roles_id' => $role_id,
                'section_id' => $section_id
            );
            return $this->db->insert('user_roles_per_section', $data);
        }
    }

}

/* End of file */